test/expected/explain_o_plus2_rkd_rk.out
struct S; explain S& operator++(S&, double)
                           ^
28: error: parameter of postfix non-member operator ++ must be int
